going modular done

--- a/2_pytorch_neural_network_classification.ipynb
+++ b/2_pytorch_neural_network_classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Neural Network Classification with PyTorch\n",
+    "# Neural Network Classification with PyTorch\n",
     "\n",
     "Classification is a problem of predicting whether something is one thing or another"
    ]
@@ -1030,7 +1030,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Replicating non-linear activation functions\n",
+    "## 7. Replicating non-linear activation functions\n",
     "Neural networks, rather than us telling the model what to learn, we give it the tools to discover patterns in data and it tries to figure out the patterns on its own.\n",
     "\n",
     "And these tools are linear and non-linear functions."
@@ -1130,7 +1130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8. Putting it all together with a multi class classification"
+    "## 8. Putting it all together with a multi class classification"
    ]
   },
   {
@@ -1428,7 +1428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9. A few model classification metrics (to evaluate our classification model)\n",
+    "## 9. A few model classification metrics (to evaluate our classification model)\n",
     "\n",
     "* Accuracy - out of 100 samples, how many does our model get right?\n",
     "* Precision \n",
