--- a/3_pytorch_computer_vision.ipynb
+++ b/3_pytorch_computer_vision.ipynb
@@ -2374,7 +2374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 10. Save and load best performing model"
+    "## 10. Save and load best performing model"
    ]
   },
   {
